salesforce-classic-Feature-IN-955/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Agreement_Information__c</fullName>
        <label>Gotransverse Agreement Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eid__c</fullName>
        <label>Gotransverse Eid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gotransverse_Product_Category__c</fullName>
        <label>Gotransverse Product Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gotransverse_Trail_Days__c</fullName>
        <label>Gotransverse Trail Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gotransverse_Trail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse Trail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gotransverse_Trial_Length_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse Trial Length Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maxServiceResources__c</fullName>
        <label>Gotransverse Max Service Resources</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>minServiceResources__c</fullName>
        <label>Gotransverse Min Service Resources</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceLists__c</fullName>
        <label>Gotransverse PriceLists</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PriceOverride__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Gotransverse Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Information__c</fullName>
        <label>Gotransverse Product Price Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requires_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Product requires an Agreement with it to be placed in the Sales Order.</description>
        <inlineHelpText>This Product requires an Agreement with it to be placed in the Sales Order.</inlineHelpText>
        <label>Gotransverse Requires Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RuleOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse RuleOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RuleType__c</fullName>
        <label>Gotransverse RuleType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gotransverse Serialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Resource_Category__c</fullName>
        <label>Gotransverse Service Resource Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Desc__c</fullName>
        <label>Gotransverse Short Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SRC_eid__c</fullName>
        <label>GTV Service Resource Category Eid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRC_Status__c</fullName>
        <label>GTV Service Resource Category Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRC_Type__c</fullName>
        <label>GTV Service Resource Category Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>